force-app/main/default/objects/SOE__c/fields/WalkThrough_Required__c.field-meta.xml
<CustomField>
    <fullName>WalkThrough_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Walkthrough Manager is default Implementation Manager.</inlineHelpText>
    <label>WalkThrough Required</label>
    <type>Checkbox</type>
</CustomField>