force-app/main/default/objects/SOE__c/fields/Warning_Zone__c.field-meta.xml
<CustomField>
    <fullName>Warning_Zone__c</fullName>
    <label>Warning Zone</label>
    <type>DateTime</type>
</CustomField>