force-app/main/default/objects/SOE__c/fields/Working_Type__c.field-meta.xml
<CustomField>
    <fullName>Working_Type__c</fullName>
    <label>Working Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24-Hours</fullName>
                <default>true</default>
                <label>24-Hours</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>