force-app/main/default/objects/SOE__c/validationRules/QAManager_And_QAReview_FieldsEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>QAManager_And_QAReview_FieldsEdit</fullName>
    <active>true</active>
    <description>The QA Manager And QA Review Fields can edit only in SOE is Build or Review.</description>
    <errorConditionFormula>AND( 
         NOT( ISPICKVAL( Status__c , &#39;Build&#39;) )
    ,    
    OR(
        ISCHANGED(  QA_Manager__c ),
        ISCHANGED( QA_Review_Required__c )
      ) 
)</errorConditionFormula>
    <errorMessage>QA Manager and QA Review Required fields can edit only in Bulid</errorMessage>
</ValidationRule>