force-app/main/default/objects/SOE__c/validationRules/Select_Backout_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Backout_Process</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      BackOut_Stage__c == true,ISBLANK(TEXT( Backout__c))
   )</errorConditionFormula>
    <errorDisplayField>Backout__c</errorDisplayField>
    <errorMessage>If you have Backout stage, then please select the Backout Process</errorMessage>
</ValidationRule>