force-app/main/default/objects/SOE__c/validationRules/Summary_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Summary_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL( Summary__c ),  ISBLANK(Summary__c ) )</errorConditionFormula>
    <errorDisplayField>Summary__c</errorDisplayField>
    <errorMessage>Please enter summary about SOE</errorMessage>
</ValidationRule>