force-app/main/default/objects/SOE__c/validationRules/ValidatationOnBaselineStartDateAndTime.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidatationOnBaselineStartDateAndTime</fullName>
    <active>true</active>
    <description>Baseline Start can be updated only in Build and Review status.</description>
    <errorConditionFormula>AND( AND(NOT( ISPICKVAL( Status__c , &#39;Build&#39;) ) , NOT( ISPICKVAL( Status__c , &#39;Review&#39; ) )) ,   ISCHANGED( Baseline_Start__c ) )</errorConditionFormula>
    <errorDisplayField>Baseline_Start__c</errorDisplayField>
    <errorMessage>Baseline Start  Date/Time can be modified only  status in Build and Review.</errorMessage>
</ValidationRule>