force-app/main/default/objects/SOE__c/validationRules/Validating_QA_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Validating_QA_Manager</fullName>
    <active>true</active>
    <errorConditionFormula>AND(QA_Review_Required__c == False, QA_Manager__c != Null)</errorConditionFormula>
    <errorDisplayField>QA_Review_Required__c</errorDisplayField>
    <errorMessage>Please select the Checkbox.</errorMessage>
</ValidationRule>