force-app/main/default/objects/SOE__c/validationRules/Validation_on_Backout_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Backout_Process</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Backout__c)</errorConditionFormula>
    <errorDisplayField>Backout__c</errorDisplayField>
    <errorMessage>Once created Process cannot be changed</errorMessage>
</ValidationRule>