force-app/main/default/objects/SOE__c/validationRules/ValidationOnConferenceCallNo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationOnConferenceCallNo</fullName>
    <active>false</active>
    <description>Conference Call No will allow only Numbers, # Character.</description>
    <errorConditionFormula>IF ( AND( NOT( ISBLANK(  Conference_Call_No__c ) ) , NOT( REGEX( Conference_Call_No__c ,&quot;^[0-9#]*$&quot;) ) ) , true,false )</errorConditionFormula>
    <errorDisplayField>Conference_Call_No__c</errorDisplayField>
    <errorMessage>Conference Call No will allow only Numbers, # Character.</errorMessage>
</ValidationRule>