force-app/main/default/objects/SOE__c/validationRules/WalkThrough_Required_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>WalkThrough_Required_Edit</fullName>
    <active>true</active>
    <description>Walkthrough Required Can edit only Build,Review and Scheduled.</description>
    <errorConditionFormula>AND( 
NOT( ISPICKVAL( Status__c , &#39;Build&#39;) ) ,
NOT( ISPICKVAL( Status__c , &#39;Review&#39;) ) ,
ISCHANGED( WalkThrough_Required__c)
)</errorConditionFormula>
    <errorMessage>WalkThrough Required can edit only in Build and Review status.</errorMessage>
</ValidationRule>