force-app/main/default/objects/SOE__c/listViews/All_SOE_s.listView-meta.xml
<ListView>
    <fullName>All_SOE_s</fullName>
    <columns>NAME</columns>
    <columns>SOE_Title__c</columns>
    <columns>All_Tasks__c</columns>
    <columns>Summary__c</columns>
    <columns>State__c</columns>
    <columns>Status__c</columns>
    <columns>Pre_Implementation_Stage__c</columns>
    <columns>Post_Implementation_Stage__c</columns>
    <columns>BackOut_Stage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Imp In Progress</value>
    </filters>
    <label>All SOE&#39;s</label>
</ListView>