force-app/main/default/objects/SOE__c/listViews/My_SOE_s.listView-meta.xml
<ListView>
    <fullName>My_SOE_s</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>SOE_Title__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My SOE&#39;s</label>
</ListView>