force-app/main/default/objects/SOE__c/listViews/My_SOE_VIEW.listView-meta.xml
<ListView>
    <fullName>My_SOE_VIEW</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Status__c</columns>
    <columns>SOE_Title__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My SOE VIEW</label>
</ListView>